--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,10 @@
         <activity android:name=".ui.activity.manage.FactoryShipActivity" />
         <activity android:name=".ui.activity.manage.FactoryShipPayActivity" />
         <activity android:name=".ui.activity.manage.PayResultActivity" />
+        <activity android:name=".ui.activity.manage.MoveStockActivity" />
+        <activity android:name=".ui.activity.manage.MoveStockProductActivity" />
+        <activity android:name=".ui.activity.manage.MoveStockConfirmActivity" />
+        <activity android:name=".ui.activity.manage.MoveStockHistoryActivity" />
 
         <!-- order -->
         <activity android:name=".ui.activity.order.OrderActivity" />
