--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,35 +27,25 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:design:$support_version"
-    implementation "com.android.support:recyclerview-v7:$support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.code.gson:gson:2.2.4'
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
-    implementation 'io.reactivex:rxandroid:1.2.0'
-    implementation 'io.reactivex:rxjava:1.1.5'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
-    implementation 'com.github.bumptech.glide:glide:4.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    implementation rootProject.ext.supportLibs
+    implementation rootProject.ext.retrofitLibs
+    implementation rootProject.ext.glideLibs
+    implementation rootProject.ext.eventbusLibs
+
     implementation 'com.github.castorflex.smoothprogressbar:library:1.1.0'
-    implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'com.android.support:multidex:1.0.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
-    implementation 'com.android.support:support-v4:23.1.1'
     implementation 'q.rorbin:badgeview:1.1.2'
     implementation 'com.github.razerdp:BasePopup:1.9.4'
-    implementation project(':jumpboxlibrary')
+    implementation 'com.steelkiwi:cropiwa:1.0.3'
 
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
     implementation 'com.jaredrummler:material-spinner:1.2.5'
+
+    implementation project(':jumpboxlibrary')
 
 }
