--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: "config.gradle"
 
 buildscript {
-    ext.compileSdkVersion = 26
-    ext.minSdkVersion = 16
-    ext.buildToolsVersion = "27.0.3"
-    ext.targetSdkVersion = 21
     ext.kotlin_version = '1.2.30'
-    ext.support_version = '27.0.1'
     repositories {
         google()
         jcenter()
