--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'q.rorbin:badgeview:1.1.2'
     implementation 'com.github.razerdp:BasePopup:1.9.4'
     implementation 'com.steelkiwi:cropiwa:1.0.3'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
