--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
         <!-- order -->
         <activity android:name=".ui.activity.order.OrderActivity" />
         <activity android:name=".ui.activity.order.OrderDetailActivity" />
+        <activity android:name=".ui.activity.order.RequestSaleAfterActivity" />
 
         <!-- mine -->
         <activity android:name=".ui.activity.mine.UserInfoActivity" />
@@ -93,6 +94,8 @@
 
         <!-- crop -->
         <activity android:name=".ui.activity.CropActivity" />
+        <activity android:name=".ui.activity.PhotoSelectActivity" />
+        <activity android:name=".ui.activity.PictureLookActivity" />
 
 
         <activity android:name=".ui.activity.web.WebActivity" />
