--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,8 @@ dependencies {
     implementation 'cn.jiguang.sdk:jpush:3.1.6'
     implementation 'cn.jiguang.sdk:jcore:1.2.5'
 
+    implementation 'cn.jzvd:jiaozivideoplayer:6.3.1'
+
     implementation project(':jumpboxlibrary')
     implementation project(':IMKit')
 }
