--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,10 @@
         <activity android:name=".ui.activity.businessschool.BusinessSchoolIndexActivity" />
         <activity android:name=".ui.activity.businessschool.PublishBusinessTalkActivity" />
         <activity android:name=".ui.activity.businessschool.PublishBusinessNoteActivity" />
-        <activity android:name=".ui.activity.businessschool.BusinessDirectoryDetailActivity" />
+        <activity
+            android:name=".ui.activity.businessschool.BusinessDirectoryDetailActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.businessschool.BusinessSchoolDetailActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
